force-app/main/default/objects/Travefy_Document__c/Travefy_Document__c.object-meta.xml
<CustomObject>
    <label>Travefy Document (Old)</label>
    <nameField>
        <label>Travefy Documentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travefy Documents (Old)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>