force-app/main/default/objects/Travefy_Document__c/fields/agent_name__c.field-meta.xml
<CustomField>
    <fullName>agent_name__c</fullName>
    <label>Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>