force-app/main/default/objects/Travefy_Document__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departure Date Id</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Travefy Documents</relationshipLabel>
    <relationshipName>Travefy_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>