force-app/main/default/objects/Travefy_Document__c/fields/exclude_sending_tp__c.field-meta.xml
<CustomField>
    <fullName>exclude_sending_tp__c</fullName>
    <formula>order__r.exclude_sending_tp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude Sending TP</label>
    <type>Checkbox</type>
</CustomField>