force-app/main/default/objects/Travefy_Document__c/fields/JSON_TripUsers_Request__c.field-meta.xml
<CustomField>
    <fullName>JSON_TripUsers_Request__c</fullName>
    <label>JSON TripUsers Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>