force-app/main/default/objects/Travefy_Document__c/fields/option_title__c.field-meta.xml
<CustomField>
    <fullName>option_title__c</fullName>
    <formula>order__r.Options__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Title</label>
    <type>Text</type>
</CustomField>