force-app/main/default/objects/Travefy_Document__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Travefy Documents</relationshipLabel>
    <relationshipName>Travefy_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>