force-app/main/default/objects/Travefy_Document__c/fields/order_number_text__c.field-meta.xml
<CustomField>
    <fullName>order_number_text__c</fullName>
    <formula>order__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>order number text</label>
    <type>Text</type>
</CustomField>