force-app/main/default/objects/Travefy_Document__c/fields/Order_Onwer__c.field-meta.xml
<CustomField>
    <fullName>Order_Onwer__c</fullName>
    <formula>order__r.Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>