force-app/main/default/objects/Travefy_Document__c/fields/order_record_type__c.field-meta.xml
<CustomField>
    <fullName>order_record_type__c</fullName>
    <formula>order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Record Type</label>
    <type>Text</type>
</CustomField>