force-app/main/default/objects/Travefy_Document__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <formula>TEXT ( order__r.Referrer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral</label>
    <type>Text</type>
</CustomField>