force-app/main/default/objects/Travefy_Document__c/fields/send_tripfull_request__c.field-meta.xml
<CustomField>
    <fullName>send_tripfull_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send TripFull Request</label>
    <type>Checkbox</type>
</CustomField>