force-app/main/default/objects/Travefy_Document__c/fields/share_url_path__c.field-meta.xml
<CustomField>
    <fullName>share_url_path__c</fullName>
    <label>Share URL Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>