force-app/main/default/objects/Travefy_Document__c/fields/tp_email_sent__c.field-meta.xml
<CustomField>
    <fullName>tp_email_sent__c</fullName>
    <formula>order__r.tp_email_sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TP Email Sent From PAI</label>
    <type>Checkbox</type>
</CustomField>