force-app/main/default/objects/Travefy_Document__c/fields/TP_has_been_sent_from_AP__c.field-meta.xml
<CustomField>
    <fullName>TP_has_been_sent_from_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TP has been sent from AP</label>
    <type>Checkbox</type>
</CustomField>