force-app/main/default/objects/Travefy_Document__c/fields/travefy_itinerary_url__c.field-meta.xml
<CustomField>
    <fullName>travefy_itinerary_url__c</fullName>
    <formula>&quot;https://app.tripadeal.com.au/trips/&quot; &amp; travefy_trip_id__c &amp; &quot;/&quot; &amp;  travefy_trip_key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travefy Itinerary Url</label>
    <type>Text</type>
</CustomField>