force-app/main/default/objects/Travefy_Document__c/fields/travefy_share_url__c.field-meta.xml
<CustomField>
    <fullName>travefy_share_url__c</fullName>
    <formula>CASE( order_record_type__c , 
&quot;TAD&quot;, &quot;https://app.tripadeal.com.au/&quot; &amp; share_url_path__c, 
&quot;TNZ&quot;, &quot;https://documentation.tripadeal.co.nz/&quot; &amp; share_url_path__c,
&quot;TC&quot; , &quot;https://tcdocumentation.tripadeal.travel/&quot; &amp; share_url_path__c,
&quot;WT&quot;, &quot;https://documentation.tripadeal.co.nz/&quot; &amp; share_url_path__c,
&quot;http://www.tripadeal.com.au/login&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travefy Share URL</label>
    <type>Text</type>
</CustomField>