force-app/main/default/objects/Travefy_Document__c/fields/travefy_trip_key__c.field-meta.xml
<CustomField>
    <fullName>travefy_trip_key__c</fullName>
    <label>Travefy Trip Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>