force-app/main/default/objects/Travefy_Document__c/fields/tripuser_last_sent__c.field-meta.xml
<CustomField>
    <fullName>tripuser_last_sent__c</fullName>
    <label>TripUser Last Sent</label>
    <type>DateTime</type>
</CustomField>