force-app/main/default/objects/Travefy_Document__c/listViews/PeteTemp.listView-meta.xml
<ListView>
    <fullName>PeteTemp</fullName>
    <columns>NAME</columns>
    <columns>travefy_itinerary_url__c</columns>
    <columns>order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Departure_Date__c</columns>
    <columns>departures_dates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>3170</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2020-03-05</value>
    </filters>
    <label>PeteTemp</label>
</ListView>